--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="./jsnetworkx_lab2web.js"></script>
     <div id="lab2web"></div>
     <script type="text/javascript" src="./lab2web.js"></script>
